Se actualizan sensores con botón

--- a/SistemaMimetizador/nbproject/project.properties
+++ b/SistemaMimetizador/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/SistemaMimetizador.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.PanamaHitek_Arduino-3.0.0.jar=C:\\Users\\SaulO\\Documents\\NetBeansProjects\\SistemaMimetizador\\src\\Librerias\\PanamaHitek_Arduino-3.0.0.jar
+file.reference.PanamaHitek_Arduino-3.0.0.jar-1=src\\Librerias\\PanamaHitek_Arduino-3.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.PanamaHitek_Arduino-3.0.0.jar}
+    ${file.reference.PanamaHitek_Arduino-3.0.0.jar}:\
+    ${file.reference.PanamaHitek_Arduino-3.0.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
