--- a/SistemaMimetizador/nbproject/project.properties
+++ b/SistemaMimetizador/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SistemaMimetizador
+application.vendor=SaulO
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,14 +27,13 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/SistemaMimetizador.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.PanamaHitek_Arduino-3.0.0.jar=C:\\Users\\SaulO\\Documents\\NetBeansProjects\\SistemaMimetizador\\src\\Librerias\\PanamaHitek_Arduino-3.0.0.jar
-file.reference.PanamaHitek_Arduino-3.0.0.jar-1=src\\Librerias\\PanamaHitek_Arduino-3.0.0.jar
+file.reference.PanamaHitek_Arduino-3.0.0.jar=src\\Library\\PanamaHitek_Arduino-3.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.PanamaHitek_Arduino-3.0.0.jar}:\
-    ${file.reference.PanamaHitek_Arduino-3.0.0.jar-1}
+    ${file.reference.PanamaHitek_Arduino-3.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
